2009-10-26  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. Make sure isQt() doesn't return true if --wx was passed to build-webkit.

        * Scripts/webkitdirs.pm:

2009-10-26  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by Darin Adler.

        Unification of using null device in perl scripts.
        https://bugs.webkit.org/show_bug.cgi?id=30572

        * Scripts/VCSUtils.pm:
        * Scripts/bisect-builds:
        * Scripts/resolve-ChangeLogs:
        * Scripts/run-iexploder-tests:
        * Scripts/run-jsc:
        * Scripts/run-mangleme-tests:
        * Scripts/run-webkit-tests:
        * Scripts/webkitdirs.pm:
        Using File::Spec->devnull() instead of hard coded /dev/null.

2009-10-26  Eric Seidel  <eric@webkit.org>

        Reviewed by Holger Freyther.

        Reviewers are missing from committers.py
        https://bugs.webkit.org/show_bug.cgi?id=30733

        * Scripts/modules/committers.py:

2009-10-23  Eric Seidel  <eric@webkit.org>

        No review, only adding Alice to the list of reviewers.

        * Scripts/modules/committers.py:

2009-10-23  Eric Seidel  <eric@webkit.org>

        Reviewed by Eric Carlson.

        fast/media/mq-transform-02.html failed on Leopard Commit Bot
        https://bugs.webkit.org/show_bug.cgi?id=30700

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetDefaultsToConsistentValues): Update QuickTime version check.

2009-10-23  Kevin Ollivier  <kevino@theolliviers.com>

        wxMac 10.4 build fix, needs to link against WebKitSystemInterfaceTiger to get 
        character measurement APIs that are private on Tiger.

        * wx/build/settings.py:

2009-10-22  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by NOBODY (build fix).
        Build fix following bug #30696.

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::evaluateScriptInIsolatedWorld):

2009-10-22  Gavin Barraclough  <barraclough@apple.com>
